samples/_failures_safe/1761436291_a39263_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_26e56fcb.c: In function ‘main’:
./samples/SAFE/__tmp_26e56fcb.c:176:5: error: expected expression at end of input
  176 |     printf("%-12s %-15s %s\n", "Line", "Type",
      |     ^~~~~~
./samples/SAFE/__tmp_26e56fcb.c:176:5: error: expected declaration or statement at end of input
